add page, new acop and custom onsite

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Workshop</h3>
+                            <h3 class="title">ACoP 7 Meeting</h3>
                                 <p class="price-figure"><span class="price-figure-inner"><span class="number">1</span><br /><span class="unit">ticket</span></p>
                             </div>
                             <div class="content">
@@ -279,7 +279,7 @@
                                     <li><i class="fa fa-check"></i>All course code</li>
                                     <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="http://www.acop6.org/registration">Register for ACoP</a>
+                                <a class="btn btn-theme btn-block" href="http://www.acop7.org/registration">Register for ACoP</a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
@@ -288,20 +288,37 @@
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
-                            <h3 class="title">Multi-person Discount</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="number">20% off</span><br /><span class="unit">per person</span></p>
+                            <h3 class="title">Page Meeting </h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="number">1 Ticket </span><br /><span class="unit">per person</span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                  <li><i class="fa fa-check"></i>Everything from either chosen package</li>
-                                  <li><i class="fa fa-check"></i>Great discount</li>
-                                  <li><i class="fa "></i>Contact Devin for Discount Code</li>
+                                  <li><i class="fa fa-check"></i>All course code</li>
+                                  <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
+                                  <li><i class="fa "></i>Contact Devin for Multi-person Discount Code</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="http://www.acop6.org/registration">Register for ACoP</a>
+                                <a class="btn btn-theme btn-block" href="http://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-24484364393">Register for PAGE </a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
                     </div><!--//item-->
+                    <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="item-inner">
+                            <div class="heading">
+                            <h3 class="title"> Onsite Training </h3>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="number"> Custom </span><br /><span class="unit">per person</span></p>
+                            </div>
+                            <div class="content">
+                                <ul class="list-unstyled feature-list">
+                                  <li><i class="fa fa-check"></i> Tailored material to group needs </li>
+                                  <li><i class="fa fa-check"></i> Preparatory Video Lectures and Reading Material </li>
+                                  <li><i class="fa fa-check"></i> Supplementary R-Foundations material </li>
+                                </ul>
+                                <a class="btn btn-theme btn-block" href="mailto:devin.pastoor@gmail.com"> Contact Devin </a>
+
+                            </div><!--//content-->
+                        </div><!--//item-inner-->
+                        </div><!--//item-->
                 </div><!--//items-wrapper-->
             </div><!--//row-->
         </div><!--//container-->
