--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                   <h2 class="title">Learn Modern R</h2>
                     <ul class="summary">
                         <li>Reduce time spent writing code</li>
-                        <li>Supercharge your workflow with packages such as dplyr, tidyr, ggplot2, PKPDmisc and vpc</li>
+                        <li>Supercharge your workflow with packages such as dplyr, tidyr, purrr, ggplot2, PKPDmisc and mrgsolve</li>
+                        <li>Write robust functions to minimize duplication</li>
                         <li>Learn best practices in project design and management</li>
                         <li>Create automated and reproducible reports with Rmarkdown</li>
                         <li>Apply the concepts and techniques learned to real-world examples!</li>
@@ -177,7 +178,7 @@
 
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>What can I do to prepare?</h3>
-                        <p class="answer">1 month before the workshop, a list of basic resources will be provided to refresh attendee's foundation. Additional optional resources will be provided to help attendees help identify areas they may wish to as questions or discuss in more depth.</p>
+                        <p class="answer">Two weeks before the workshop, a list of basic resources will be provided to refresh attendee's foundation. Additional optional resources will be provided to help attendees help identify areas they may wish to as questions or discuss in more depth.</p>
                     </div><!--//item-->
                 </div><!--//faq-col-->
             </div><!--//row-->
@@ -197,7 +198,7 @@
                     <p>Dr. Vijay Ivaturi and Devin Pastoor are members of the Center for Translational Medicine at the University of Maryland School of Pharmacy</p>
                     <p>Dr. Ivaturi's research focuses on the development of methods and tools for quantitative clinical pharmacology. He obtained his doctorate in experimental and clinical pharmacology from the University of Minnesota, which he followed with a post-doctoral fellowship in pharmacometrics at Uppsala University in Sweden before joining the CTM</p>
                     <p>
-                      Devin has worked for the past 3 years interfacing insights gained from translational models with tools to speed up the modeling and data analysis process. He has authored over 5 R packages
+                      Devin has worked for the past 5 years interfacing insights gained from translational models with tools to speed up the modeling and data analysis process. He has authored over 5 R packages
                       and continues to develop new tools to facilitate model-based drug development. 
                     </p>
                 </div><!--//content-->
