--- a/index.html
+++ b/index.html
@@ -269,23 +269,7 @@
     <section id="pricing" class="pricing section has-pattern">
         <div class="container">
                 <div class="items-wrapper col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
-                    <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
-                        <div class="item-inner">
-                            <div class="heading">
-                            <h3 class="title">ACoP 7 Meeting</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="number">1</span><br /><span class="unit">ticket</span></p>
-                            </div>
-                            <div class="content">
-                                <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>All course code</li>
-                                    <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
-                                </ul>
-                                <a class="btn btn-theme btn-block" href="http://www.acop7.org/registration">Register for ACoP</a>
-
-                            </div><!--//content-->
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-
+                   
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
                             <div class="heading">
@@ -298,7 +282,7 @@
                                   <li><i class="fa fa-check"></i>Supplementary R-Foundations material</li>
                                   <li><i class="fa "></i>Contact Devin for Multi-person Discount Code</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="http://www.eventbrite.com/e/modern-r-for-pharmacometrics-tickets-24484364393">Register for PAGE </a>
+                                <a class="btn btn-theme btn-block" href="https://www.eventbrite.com/e/the-tidyverse-for-pharmacometrics-tickets-33043259278">Register for PAGE </a>
 
                             </div><!--//content-->
                         </div><!--//item-inner-->
